15.1.4
-------

15.1.3
-------
(RB=1121128)
Revert throwing 400 for invalid query parameters due to existing services usage.

15.1.2
-------
(RB=1120645)
Ignore missing required fields in validating query parameters.

15.1.1
-------
(RB=1116706)
Adding possibility to specify a server's certificate checker implementing the SSLSessionValidator interface

15.1.0
-------
(RB=1114407)
Added ResourceDefinitionListener to provide a mechanism for RestLiServer to notify the listener of the initialized Rest.li resources.

15.0.5
-------
(RB=1087090)
D2 customized partition implementation


15.0.4
-------
(RB=1109051)
Expose remote port number in the request context in both server and client sides

(RB=1107522)
Introduced a generic RequestHandler interface. Refactored existing documentation handler, multiplexed request handler and debug request handler to use this interface.
Collapse BaseRestServer with RestLiServer as its not used.
Removed deprecated InvokeAware and related code. It's not used at LinkedIn.

15.0.3
-------
(RB=1091414)
Support Unstructured Data (Blob) as Rest.li Resource

15.0.2
-------
(RB=1102528)
Allow d2 clients to configure http.poolStatsNamePrefix from D2 zookeeper's service config

(RB=1100491)
FilterChainCallback and RestLiCallback code refactoring.

(RB=1098968)
Improve the test execution for multipart-mime tests. Server is started/shutdown once per class instead of per test. This brings the build time for pegasus down from 20+ minutes to 6.5 mins.

(RB=1104659)
Throw 400 error for invalid query parameter values.

(RB=1104041)
Adds property pegasus.generateRestModel.includedSourceTypes to let users specify source types for GenerateRestModelTask
Changes RestLiSnapshotExporter,RestLiResourceModelExporter to use MultiLanguageDocsProvider by default

15.0.1
-------
(RB=1097555)
Fixing double callback invocation bug in WarmUpLoadBalancer

15.0.0
-------
(RB=1076571)